Made the demo illustrate different between SqlCacheDependency constructors

--- a/Caching/CachingSample/CacheDependencyDemo/Views/Home/Index.cshtml
+++ b/Caching/CachingSample/CacheDependencyDemo/Views/Home/Index.cshtml
@@ -25,7 +25,8 @@
     </div>
     <div class="col-md-4">
         <h2>Cached Data</h2>
-        <p>@ViewBag.cached</p>
+        <p>@ViewBag.employees</p>
+        <p>@ViewBag.customers</p>
         <p>@ViewBag.requested</p>
     </div>
 </div>
